# conversation-summarizer

./: .gitignore  Listener.py  README.md  backend.py  pyproject.toml  speech_to_text.py  stt.py
pages/: Conversations.py
